--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,12 @@ flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
 pep8-naming==0.13.2
 pytest==7.1.3
+anyio==4.6.0
+beautifulsoup4==4.12.3
+certifi==2024.8.30
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
+idna==3.10
+sniffio==1.3.1
+soupsieve==2.6
